--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -162,6 +162,7 @@
                         <Button Content="连接相机" HorizontalAlignment="Center" VerticalAlignment="Center" Click="Button_Click" Height="30"/>
                         <Button Content="断开连接" HorizontalAlignment="Center" VerticalAlignment="Center" Click="Button_Click_1" Margin="10,0" Height="30"/>
                         <Button Content="重新连接" HorizontalAlignment="Center" VerticalAlignment="Center" Click="Button_Click_2" Margin="0,0,10,0" Height="30"/>
+                        <Button Content="开始录制" HorizontalAlignment="Center" VerticalAlignment="Center" Click="Button_recoder" Margin="0,0,10,0" Height="30"/>
                         <Button x:Name="btnSetting" Click="btnSetting_Click">设置</Button>
                     </StackPanel>
                 </Grid>
