--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -65,7 +65,9 @@
                     </ListBox>
                 </DockPanel>
             </materialDesign:DrawerHost.LeftDrawerContent>
-
+            <materialDesign:DrawerHost.RightDrawerContent>
+                <Frame x:Name="helperFrame" Width="600" Height="600"/>
+            </materialDesign:DrawerHost.RightDrawerContent>
             <DockPanel>
                 
                 <materialDesign:ColorZone
@@ -135,37 +137,8 @@
                             Text="趣味哈哈镜"/>
                     </DockPanel>
                 </materialDesign:ColorZone>
-
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="3*"/>
-                        <ColumnDefinition Width="3*"/>
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*"/>
-                        <RowDefinition Height="8*"/>
-                        <RowDefinition Height="*"/>
-                    </Grid.RowDefinitions>
-                    <wfi:WindowsFormsHost x:Name="formHost1" Grid.Row="1" Height="360" Width="640">
-                        <aforge:VideoSourcePlayer x:Name="vp1" Dock="Fill">
-                        </aforge:VideoSourcePlayer>
-                    </wfi:WindowsFormsHost>
-                    <wfi:WindowsFormsHost x:Name="formHost2" Grid.Row="1" Height="360" Width="640" Grid.Column="1">
-                        <aforge:VideoSourcePlayer x:Name="vp2">
-                        </aforge:VideoSourcePlayer>
-                    </wfi:WindowsFormsHost>
-                    <StackPanel Grid.ColumnSpan="2" Orientation="Horizontal" Height="50" HorizontalAlignment="Left">
-                        <Label HorizontalAlignment="Left" VerticalAlignment="Center">相机</Label>
-                        <ComboBox x:Name="camListBox" Margin="0" Width="150" VerticalAlignment="Center"/>
-                        <Label HorizontalAlignment="Left" VerticalAlignment="Center">滤镜</Label>
-                        <ComboBox x:Name="filterListBox" Margin="0" VerticalAlignment="Center" SelectionChanged="filterListBox_SelectionChanged" Width="150"/>
-                        <Button Content="连接相机" HorizontalAlignment="Center" VerticalAlignment="Center" Click="Button_Click" Height="30"/>
-                        <Button Content="断开连接" HorizontalAlignment="Center" VerticalAlignment="Center" Click="Button_Click_1" Margin="10,0" Height="30"/>
-                        <Button Content="重新连接" HorizontalAlignment="Center" VerticalAlignment="Center" Click="Button_Click_2" Margin="0,0,10,0" Height="30"/>
-                        <Button Content="开始录制" HorizontalAlignment="Center" VerticalAlignment="Center" Click="Button_recoder" Margin="0,0,10,0" Height="30"/>
-                        <Button x:Name="btnSetting" Click="btnSetting_Click">设置</Button>
-                    </StackPanel>
-                </Grid>
+                <Frame Name="mainFrame" BorderThickness="2" NavigationUIVisibility="Hidden" />
+                
             </DockPanel>
         </materialDesign:DrawerHost>
     </materialDesign:DialogHost>
