侧边菜单搜索和跳转

--- a/pages/setting/SettingPage.xaml
+++ b/pages/setting/SettingPage.xaml
@@ -7,8 +7,17 @@
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="SettingPage">
-
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="8*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="8*"/>
+        </Grid.RowDefinitions>
+        <Label Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center">设置</Label>
+        <GroupBox Grid.Column="1" Header="相机设置" Grid.Row="1" />
     </Grid>
 </Page>
